# Automation-One

./: .editorconfig  .env.ci  .env.example  .git_commit_message.txt  .gitattributes  .gitignore  .trivyignore  AGENTS.md  ANALYSIS_COMPLETE.txt  BUGBOT.md  Bodenfeuchte-Kalibrierung-Implementierungsbericht.md  Bugs_Found.md  CLAUDE.md  COMMIT_MSG.txt  DEVICE_SENSOR_LIFECYCLE_REPORT.md  EDITOR_TIEFENANALYSE_BERICHT_2026-03-07.md  FRONTEND_PLAN.md  GAP_ANALYSIS_AND_IMPLEMENTATION_PLAN.md  God-Kaiser_Server_Analyse.md  Hierarchie.md  IMPLEMENTATION_ROADMAP.md  KI_INTEGRATION_CODEBASE_ANALYSIS_TASK.md  KI_INTEGRATION_CODEBASE_ANALYSIS_TASK_PHASES_4-8.md  KI_INTEGRATION_IMPLEMENTATION.md  LOGIC_SYSTEM_ANALYSE_ARCHIV.md  Makefile  NEXT_STEPS.md  ONBOARDING_ANALYSIS_REPORT.md  PHASE_2_IMPLEMENTATION_REVIEW.md  PHASE_3_4_IMPLEMENTATION_PLAN.md  PROJECT_ANALYSIS_REPORT.md  QUICKACTIONBALL_IST_ANALYSE_2026-03-07.md  README.md  SERVER_BOOT_ANALYSIS_REPORT.md  SHT31_FRONTEND_HANDLING_REPORT.md  TESTING_INSTRUCTIONS.md  TEST_REPORT_TEMPLATE.md  TEST_WORKFLOW.md  WOKWI_ANALYSE_UND_KONFIGURATION.md  WOKWI_CRITICAL_ERROR_ANALYSE.md  (+18 more)
El Servador/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TEST_SETUP.md  alembic.ini  pyproject.toml  pytest.ini  run_maintenance_tests.py
El Servador/docs/: ARCHITECTURE_DEPENDENCIES.md  AUTHENTICATION_AUDIT.md  ESP32_TESTING.md  MQTT_TEST_PROTOCOL.md  SENSOR_IMPLEMENTATION_PHASE_2_3.md  TEST_COVERAGE_ANALYSIS.md  codebase-analysis-report.md
El Servador/god_kaiser_server/: .env.example  .gitignore  CHANGELOG.md  FIX_MQTT_PROBLEM.md  HARDWARE_VALIDATION_TEST_PLAN_REVIEW.md  PRODUCTION_READINESS.md  README.md  alembic.ini  check_db.py  create_admin_user.py  create_db.py  create_test_admin.py  interactive_test_esp32.py  mosquitto_fix.conf  mosquitto_full_logging.conf  mosquitto_minimal.conf  pyproject.toml  run_tests_batch.py  setup.py  test_full_system_scenarios.py  test_interactive_session.py  test_mqtt_pub.py  test_results.txt
El Servador/god_kaiser_server/.claude/: CODEBASE_ANALYSIS.md  Plan.md
El Servador/god_kaiser_server/alembic/: env.py  script.py.mako
El Servador/god_kaiser_server/alembic/versions/: 001_add_multi_value_sensor_support.py  06ee633a722f_merge_multiple_head_revisions_add_data_.py  245078bda463_merge_heads.py  24e8638e14a5_add_request_id_to_audit_log.py  950ad9ce87bb_add_i2c_address_to_sensor_unique_.py  add_actuator_fail_safe_on_disconnect.py  add_alert_config_and_runtime_stats.py  add_alert_lifecycle_columns.py  add_api_keys_table.py  add_audit_log_indexes.py  add_command_intent_outcome_contract.py  add_contract_shadow_fields_to_command_outcomes.py  add_critical_rule_degraded_fields.py  add_custom_data_to_subzone_configs.py  add_dashboard_target_field.py  add_dashboards_table.py  add_data_source_field.py  add_device_scope_and_context.py  add_device_zone_changes.py  add_diagnostic_reports.py  add_discovery_approval_fields.py  add_email_log_table.py  add_esp_heartbeat_logs.py  add_esp_heartbeat_runtime_telemetry_jsonb.py  add_hardware_type_to_actuator_configs.py  add_last_command_and_error_message_to_ActuatorState.py  add_logic_hysteresis_states.py  add_master_zone_id_to_esp_device.py  add_multispeq_sensor_kind_virtual_status.py  add_notification_fingerprint.py  add_notifications_and_preferences.py  add_plants_entity_lifecycle_events.py  add_plugin_tables.py  add_sensor_data_dedup_constraint.py  add_sensor_data_zone_subzone.py  add_sensor_lifecycle_columns.py  add_sensor_operating_modes.py  add_subzone_configs_table.py  add_token_blacklist_table.py  (+28 more)
El Servador/god_kaiser_server/config/: logging.yaml
El Servador/god_kaiser_server/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  FIRMWARE_CONTRACT_SERVER_2026-04-05.md  HTTP_API_SENSOR_PROCESSING.md  MOCK_ESP_SENSOR_SIMULATION.md  MQTT_TOPICS.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md  emergency-stop-mqtt-correlation.md  finalitaet-http-mqtt-ws.md  logic-rule-priority.md
El Servador/god_kaiser_server/scripts/: backfill_assigned_sensor_config_ids.py  backup_db.py  cleanup_old_data.py  cleanup_orphaned_configs.py  create_admin.py  fix_esp_aeae64_co2_uart.py  generate_certificates.py  init_db.py  migrate_from_old.py  restore_db.py  seed_multispeq_triggers.py  seed_wokwi_esp.py  test_mqtt.py  verify_aut586.py
El Servador/god_kaiser_server/src/: main.py
El Servador/god_kaiser_server/tests/: conftest.py
(+3965 files in other folders)
