[tool.poetry]
name = "god-kaiser-server"
version = "1.0.1"
description = "God-Kaiser Server - Industrial IoT Backend for ESP32 Firmware Management"
authors = ["Auto-One Team"]
readme = "README.md"
packages = [{include = "god_kaiser_server", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# FastAPI Stack
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"

# Database
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"  # PostgreSQL sync driver

# Pydantic
pydantic = {extras = ["email"], version = "^2.5.3"}
pydantic-settings = "^2.1.0"

# MQTT
paho-mqtt = "^1.6.1"
aiomqtt = "^2.0.1"  # Async MQTT client

# Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"

# Utilities
python-dateutil = "^2.8.2"
pytz = "^2024.1"

# HTTP Client
httpx = "^0.26.0"
aiohttp = "^3.9.3"

# WebSocket
websockets = "^12.0"

# Monitoring & Logging
prometheus-client = "^0.19.0"
apscheduler = "^3.11.2"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0.0"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pyjwt = "^2.9.0"

# Code Quality
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pylint = "^3.0.3"

# Type Stubs
types-python-dateutil = "^2.8.19"
types-pytz = "^2024.1"

[tool.poetry.scripts]
server = "god_kaiser_server.src.main:main"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | alembic
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["alembic/*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=god_kaiser_server --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "esp32: ESP32 mock tests",
    "e2e: End-to-end tests",
    "hardware: Tests requiring real ESP32 hardware (deselect with '-m \"not hardware\"')",
    "performance: Performance benchmarking tests",
    "slow: Slow-running tests (can be skipped with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["god_kaiser_server"]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
